Shortcuts are functional now, although loading and saving does not work yet
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6995 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/src/org/micromanager/utils/HotKeyFrame.form
+++ b/mmstudio/src/org/micromanager/utils/HotKeyFrame.form
@@ -47,8 +47,9 @@
                   <Component id="saveButton_" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                   <Component id="loadButton_" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="jScrollPane1_" min="-2" pref="351" max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <Component id="jScrollPane1_" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -58,6 +59,9 @@
       <Properties>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[23, 15]"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[32767, 32767]"/>
         </Property>
       </Properties>
 
