Start working on Image processor in pipeline
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@8272 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/plugins/SplitView/src/org/micromanager/splitview/SplitViewFrame.form
+++ b/plugins/SplitView/src/org/micromanager/splitview/SplitViewFrame.form
@@ -59,6 +59,11 @@
               </Group>
               <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
           </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="applyToMDACheckBox_" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="130" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -78,6 +83,8 @@
                   <Component id="liveButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="snapButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="applyToMDACheckBox_" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -136,6 +143,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="liveButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="applyToMDACheckBox_">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Apply to Acquisition"/>
+      </Properties>
+      <Events>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="applyToMDACheckBox_StateChanged"/>
       </Events>
     </Component>
   </SubComponents>
